--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <H1>BIOGRAPHY</H1>
         <h2><em><b> Namugga Martha </b></em></h2>
-        <img src ="./Martha.jpg" alt = "Martha Hellen Namugga"
+        <img src ="Martha.jpg" alt = "Martha Hellen Namugga"
         style="width:150px;height:200px;">
         <p> My name is Namugga Martha Hellen, a first year student doing software engineering at Makerere University.
             <br>I am the first born daughter to Mr and Mrs Luyombo and I have two siblings, Matthew and Mark.
