--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="CSS/stlyes.css">
         <title>Martha's modified page</title>
-        <link rel="icon" type="image/x-icon" href="Images/favicon.ico.jpg">
+        <link rel="icon" type="image/x-icon" href="favicon.ico.jpg">
         
     </head>
     <body>
