--- a/picture.html
+++ b/picture.html
@@ -8,7 +8,7 @@
         </title>
     </head>
         <body>
-          <img src ="Images/Martha.jpg" alt = "Martha Hellen Namugga"
+          <img src ="Martha.jpg" alt = "Martha Hellen Namugga"
             style="width:500px;height:550px;">
         </body>   
 </html>
