--- a/old.html
+++ b/old.html
@@ -12,7 +12,7 @@
         <H1>BIOGRAPHY</H1>
         <h2><em><b> Namugga Martha </b></em></h2>
         <div class="biopic">
-            <span><img src ="Images/Martha.jpg" alt = "Martha Hellen Namugga"
+            <span><img src ="Martha.jpg" alt = "Martha Hellen Namugga"
             style="width:150px;height:200px;"></span>
         
            <div class="bio"> <p> My name is Namugga Martha Hellen, a first year student doing software engineering at Makerere University.
